apps/home-assistant/base/zigbee2mqtt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.10.1
          ports:
            - containerPort: 8080
              name: frontend
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: config
              mountPath: /app/data/configuration.yaml
              subPath: configuration.yaml
            - name: zigbee-device
              mountPath: /dev/ttyUSB0
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: config
          configMap:
            name: zigbee2mqtt-config
        - name: zigbee-device
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
      name: frontend
